Adding clang-format script & reordering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.2)
-project(stdext CXX)
+cmake_minimum_required(VERSION 3.28)
+project(std_extention CXX)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 23)
@@ -11,9 +11,9 @@ set(CMAKE_BUILD_TYPE RelWithDebInfo)
 file(GLOB SOURCES "src/*.cpp")
 
 # Create the static library
-add_library(stdext STATIC ${SOURCES})
+add_library(std_extention STATIC ${SOURCES})
 
-target_include_directories(stdext PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_compile_features(stdext PUBLIC cxx_std_23)
+target_include_directories(std_extention PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_compile_features(std_extention PUBLIC cxx_std_23)
 # Link additional libraries
-target_link_libraries(stdext PUBLIC -lstdc++_libbacktrace)
+target_link_libraries(std_extention PUBLIC -lstdc++_libbacktrace)
