--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.28)
+cmake_minimum_required(VERSION 3.2)
 project(std_extention CXX)
 
 # Set C++ standard
@@ -16,4 +16,4 @@ add_library(std_extention STATIC ${SOURCES})
 target_include_directories(std_extention PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_compile_features(std_extention PUBLIC cxx_std_23)
 # Link additional libraries
-target_link_libraries(std_extention PUBLIC -lstdc++_libbacktrace)
+target_link_libraries(std_extention PUBLIC -lstdc++exp)
