Fix compile definitions issues while using Boost

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,7 @@ target_include_directories(std_extension PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/incl
 target_compile_features(std_extension PUBLIC cxx_std_23)
 
 if(USE_BOOST_STACKTRACE)
-    add_compile_definitions(USE_BOOST_STACKTRACE)
-    include_directories(Boost::stacktrace_backtrace)
+    target_compile_definitions(std_extension PUBLIC USE_BOOST_STACKTRACE)
     target_link_libraries(std_extension PUBLIC Boost::stacktrace_backtrace)
 else()
     target_link_libraries(std_extension PUBLIC -lstdc++exp)
